form layout and trying to figure out some layout issues

--- a/css-src/partials/development/_dev-layout.scss
+++ b/css-src/partials/development/_dev-layout.scss
@@ -52,15 +52,17 @@
 }
 .t_kitchenSink {
 	.navSecondary {
-		position: fixed;
+		background: green;
 		@include at-breakpoint($tablet) {
 			@include span-columns(2,12);
 		}
 		@include at-breakpoint($computer) {
 			@include span-columns(2,12);
+			position: fixed;
 		}
 	}
 	.contentMain {
+		background: yellow;
 		@include at-breakpoint($tablet) {
 			@include span-columns(10 omega,12);
 		}
